--- a/gop/drupal-service.yaml
+++ b/gop/drupal-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: drupal-mysql-service
+  name: drupal-service
 spec:
   selector:
-    app: mysql
+    app: drupal
   ports:
     - protocol: TCP
-      port: 3306
-      targetPort: 3306
-  type: ClusterIP
+      port: 80
+      nodePort: 30095
+  type: NodePort
