--- a/gop_pento/gop-fileserver-pod.yaml
+++ b/gop_pento/gop-fileserver-pod.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: gop-fileserver
+  labels:
+    app: fileserver
 spec:
   containers:
     - name: gop-fileserver
