--- a/gop_redis_island/redis-cluster-statefulset.yaml
+++ b/gop_redis_island/redis-cluster-statefulset.yaml
@@ -15,28 +15,36 @@ spec:
     spec:
       terminationGracePeriodSeconds: 10
       containers:
-      - name: redis
-        image: redis:5.0.1-alpine
-        command: [ "/conf/update-node.sh", "redis-server", "/conf/redis.conf" ]
-        env:
-          - name: POD_IP
-            valueFrom:
-              fieldRef:
-                fieldPath: status.podIP            
-        ports:
-        - containerPort: 6379
-          name: client
-        - containerPort: 16379
-          name: gossip
-        volumeMounts:
-        - name: www
-          mountPath: /usr/share/nginx/html
-  volumeClaimTemplates:
-  - metadata:
-      name: www
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: "my-storage-class"
-      resources:
-        requests:
-          storage: 1Gi
+        - name: redis
+          image: redis:5.0.1-alpine
+          command: [ "/conf/update-node.sh", "redis-server", "/conf/redis.conf" ]
+          env:
+            - name: POD_IP
+              valueFrom:
+                fieldRef:
+                  fieldPath: status.podIP            
+          ports:
+            - containerPort: 6379
+              name: client
+            - containerPort: 16379
+              name: gossip
+          volumeMounts:
+            - name: conf
+              mountPath: /conf
+              readOnly: false
+              defaultMode: 0755
+            - name: data
+              mountPath: /data
+              readOnly: false
+      volumes:
+        - name: conf
+          configMap:
+            name: redis-cluster-configmap
+      volumeClaimTemplates:
+        - metadata:
+            name: data
+          spec:
+          accessModes: [ "ReadWriteOnce" ]
+          resources:
+            requests:
+              storage: 1Gi
